--- a/app/package.json
+++ b/app/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "author": "Ieva St",
   "license": "MIT",
+  "homepage": "https://g-iele.github.io/pocket-cart/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "formatter": "prettier --config ../.prettierrc",
     "format": "yarn formatter --write \"./**/*.{ts,tsx,js,jsx}\" ",
@@ -19,6 +21,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "gh-pages": "^6.3.0",
     "sass": "^1.85.1",
     "vite": "^6.2.1",
     "vite-plugin-checker": "0.9.0",
